--- a/index.html
+++ b/index.html
@@ -11,15 +11,9 @@
         <header>
             <nav>
                 <div>
-                    <p>
-                        Works
-                    </p>
-                    <p>
-                        Blog
-                    </p>
-                    <p>
-                        contact
-                    </p>
+                    <a href="#">Home</a>
+                   <a href="./pages/blog.html">Blog</a>
+                   <a href="#">Contact</a>
                 </div>
             </nav>
             <div class="main-header">
