--- a/pages/blog.html
+++ b/pages/blog.html
@@ -14,7 +14,7 @@
                     <a class="child" href="#">Blog</a>
                 </li>
                 <li>
-                    <a href="#">Works</a>
+                    <a href="./works.html">Works</a>
                 </li>
                 <li>
                     <a href="#">Contact</a>
